# SplinterRAT

./: DISCLAIMER  LICENSE  README.md
jcClient/: .gitignore  CMakeLists.txt  Makefile  client.cpp  configuration.h
jcClient/box_message/: MessageBoxGUI.cpp  MessageBoxGUI.h
jcClient/cmake/: FindOpenCV.cmake
jcClient/compile_configuration/: assembly.rc
jcClient/converter/: Converter.cpp
jcClient/download/: Download.cpp  Download.h
jcClient/file/: FileManager.cpp  FileManager.h
jcClient/includes/: Base64.h  ClientSocket.h  ConnectionState.h  CredentialsExtractor.h  DeviceEnumerator.h  Download.h  FileManager.h  Information.h  Install.h  KeyLogger.h  KeyboardExecuter.h  MessageBoxGUI.h  NetworkInformation.h  Permission.h  ReverseShell.h  ScreenStreamer.h  Sender.h  Stream.h  SystemInformation.h  SystemState.h  ThreadGen.h  WebcamManager.h  ZipCompressor.h  configuration.h
jcClient/information/network/: NetworkInformation.cpp  NetworkInformation.h
jcClient/information/system/: SystemInformation.cpp  SystemInformation.h
jcClient/install/: Install.cpp  Install.h
jcClient/keyboard/: KeyboardExecuter.cpp  KeyboardExecuter.h
jcClient/keylogger/: KeyLogger.cpp  KeyLogger.h
jcClient/permission/: Permission.cpp  Permission.h
jcClient/reverse_shell/: ReverseShell.cpp  ReverseShell.h
jcClient/screen/: ScreenStreamer.cpp  ScreenStreamer.h
jcClient/sender/: Sender.cpp  Sender.h
jcClient/src/: client.cpp
jcClient/src/base/: Handler.cpp
jcClient/src/box_message/: MessageBoxGUI.cpp
jcClient/src/connection/: ConnectionState.cpp
jcClient/src/credentials/: CredentialsExtractor.cpp
jcClient/src/download/: Download.cpp
jcClient/src/file/: FileManager.cpp
jcClient/src/information/: Information.cpp  NetworkInformation.cpp  SystemInformation.cpp
jcClient/src/information/network/: NetworkInformation.cpp
jcClient/src/information/system/: SystemInformation.cpp
jcClient/src/install/: Install.cpp
jcClient/src/keyboard/: KeyboardExecuter.cpp
jcClient/src/keylogger/: KeyLogger.cpp
jcClient/src/permission/: Permission.cpp
jcClient/src/reverse_shell/: ReverseShell.cpp
jcClient/src/screen/: ScreenStreamer.cpp
jcClient/src/sender/: Sender.cpp
jcClient/src/state/: SystemState.cpp
jcClient/src/stream/: Stream.cpp
jcClient/src/video_audio/: DeviceEnumerator.cpp
jcClient/src/webcam/: WebcamManager.cpp
jcClient/src/websocket/: ClientSocket.cpp
jcClient/src/zip/: ZipCompressor.cpp
jcClient/stream/: Stream.cpp  Stream.h
jcClient/thread/: ThreadGen.h  ThreadGen.tpp
jcClient/time/: Time.cpp  Time.h
jcClient/video_audio/: DeviceEnumerator.cpp  DeviceEnumerator.h
jcClient/webcam/: WebcamManager.cpp  WebcamManager.h
jcServer/Server/src/Connections/: BytesChannel.java  Category.java  Client.java  ClientErrorHandler.java  ClientHandler.java  Connection.java  ConnectionStore.java  FileWriterTask.java  GetSYS.java  Identifier.java  PacketOuterClass.java  Sender.java  Server.java  ServerV2.java  Streams.java  ThreadPool.java  UniqueByteIDGenerator.java  Updater.java
jcServer/Server/src/GUI/: JsGUI.java  Main.java  SplinterGUI.java
jcServer/Server/src/GUI/Builder/: CPPExtractor.java  CPPModifier.java  Compiler.java  CompilerGUI.java  CompilingAnimation.java  FieldListener.java  Mutex.java  VersionChecker.java
jcServer/Server/src/GUI/Compiler/: CPPExtractor.java  CPPModifier.java  Compiler.java  CompilerGUI.java  CompilingAnimation.java  FieldListener.java  IncludeModifier.java  Mutex.java  VersionChecker.java
jcServer/Server/src/GUI/ProgressBar/: Animation.java  Bar.java  DownloadProgressBar.java  UploadProgressBar.java
jcServer/Server/src/GUI/Server/: ServerGUI.java
jcServer/Server/src/Information/: AbstractAction.java  AbstractDialogCreator.java  AbstractEvent.java  AbstractGUIManager.java  Action.java  FolderOpener.java  GUIManagerInterface.java  NetworkInformation.java  NullStream.java  Response.java  SystemInformation.java  Time.java
src/client/: .gitignore  CMakeLists.txt  Makefile
src/client/cmake/: FindOpenCV.cmake
src/client/compile_configuration/: assembly.rc
src/client/includes/: BlockingQueue.h  ClientSocket.h  ConnectionState.h  Converter.h  CredentialsExtractor.h  DeviceEnumerator.h  Download.h  FileManager.h  Handler.h  Information.h  KeyLogger.h  KeyboardExecuter.h  MessageBoxGUI.h  NetworkInformation.h  Permission.h  ReverseShell.h  ScreenStreamer.h  Sender.h  Stream.h  SystemInformation.h  SystemState.h  TimeCS.h  WebcamManager.h  configuration.h
src/client/src/: client.cpp
src/client/src/box_message/: MessageBoxGUI.cpp
src/client/src/connection/: ConnectionState.cpp
src/client/src/download/: Download.cpp
src/client/src/file/: FileManager.cpp
src/client/src/information/: Information.cpp  SystemInformation.cpp
src/client/src/keyboard/: KeyboardExecuter.cpp
src/client/src/keylogger/: KeyLogger.cpp
src/client/src/permission/: Permission.cpp
src/client/src/reverse_shell/: ReverseShell.cpp
src/client/src/screen/: ScreenStreamer.cpp
src/client/src/state/: SystemState.cpp
src/client/src/stream/: Stream.cpp
src/client/src/time/: TimeCS.cpp
src/client/src/video_audio/: DeviceEnumerator.cpp
src/client/src/webcam/: WebcamManager.cpp
src/client/src/websocket/: ClientSocket.cpp
src/server - GUI/ServerCore/src/Compiler/: ClientExtractor.java  CompilerProcess.java  FileModifier.java  VersionChecker.java
src/server - GUI/ServerCore/src/Information/: Category.java  Information.java  NetworkInformation.java  Response.java  SystemInformation.java
src/server - GUI/ServerCore/src/Server/: BytesChannel.java  (+8 more)
src/server - GUI/nextapp/: jsconfig.json  package-lock.json  package.json  tree.txt
src/server - GUI/nextapp/pages/: _app.js  builder.js  home.js  index.js
src/server - GUI/webapp/: package-lock.json  package.json
src/server - GUI/webapp/src/: App.js  ClientManager.js  ClientTable.js  ContextMenu.js  FileManager.js  MainTabs.js  actionHandlers.js  actionTypes.js  clientSlice.js  fileManagerActions.js  fileTable.js  index.js  messageHandlers.js  store.js  theme.js  websocketMiddleware.js
(+461 files in other folders)
